[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/SoftCollisions.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/WanderController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Scene/SpeechBubble.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/NpcAnimation.gd" type="Script" id=5]
[ext_resource path="res://Scene/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[node name="NpcAnimation" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SoftCollisions" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="SoftCollisions" index="0"]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="WanderController" parent="." instance=ExtResource( 2 )]

[node name="SpeechBubble" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -32 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="SoftCollisions"]
[editable path="PlayerDetectionZone"]
